@@ -266,240 +266,5 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Mon Aug 14 2000 Jeff Johnson <jbj@redhat.com>
-- disable rpmlib(VersionedDependencies) by defining _noVersionedDependencies.
-- man page fixes.
-
-* Mon Aug  7 2000 Jeff Johnson <jbj@redhat.com>
-- fix: segfault when globbing on "" (#15593).
-
-* Fri Aug  4 2000 Jeff Johnson <jbj@redhat.com>
-- fix: popt POST callbacks typo.
-- fix: -Va broken, make db cursors per-iterator, not per-dbi.
-
-* Thu Aug  3 2000 Jeff Johnson <jbj@redhat.com>
-- add glibc requirement.
-
-* Mon Jul 31 2000 Jeff Johnson <jbj@redhat.com>
-- fix: uniqify dependency problems when printing (#14034).
-- fix: segfault on erase if filestates is missing in header (#14679).
-- popt: add ability to perform callbacks for every, not just first, match.
-
-* Sat Jul 29 2000 Jeff Johnson <jbj@redhat.com>
-- bail on firstkey/nextkey, there's a better way.
-- link rpm2cpio dynamically since cpio is linked dynamically.
-- re-resurrect firstkey/nextkey python bindings for up2date compatibility.
-
-* Fri Jul 28 2000 Jeff Johnson <jbj@redhat.com>
-- resurrect firstkey/nextkey python bindings.
-
-* Wed Jul 26 2000 Jeff Johnson <jbj@redhat.com>
-- fix: look for any/all dbapi when rebuilding.
-
-* Tue Jul 25 2000 Jeff Johnson <jbj@redhat.com>
-- create rpmbuild/rpmquery/rpmverify/rpmsign symlinks.
-
-* Mon Jul 24 2000 Jeff Johnson <jbj@redhat.com>
-- rebuild with python binding fix.
-
-* Tue Jul 18 2000 Jeff Johnson <jbj@redhat.com>
-- rebuild against glibc-2.1.91-14.
-- add /usr/kerberos/man to brp-compress.
-
-* Mon Jul 17 2000 Jeff Johnson <jbj@redhat.com>
-- first release candidate.
-
-* Sat Jul 15 2000 Jeff Johnson <jbj@redhat.com>
-- rip out pre-transaction syscalls, more design is needed.
-- display rpmlib provides when invoked with --showrc.
-- remove (dead) dependency checks on implicitly provided package names.
-- remove (dead) rpmdb API code in python bindings.
-- remove (legacy) support for version 1 packaging.
-- remove (legacy) support for converting gdbm databases.
-- fix: make set of replaced file headers unique.
-- fix: don't attempt dbiOpen with anything but requested dbN.
-
-* Thu Jul 13 2000 Jeff Johnson <jbj@redhat.com>
-- fix: initialize pretransaction argv (segfault).
-- fix: check rpmlib features w/o database (and check earlier as well).
-
-* Wed Jul 12 2000 Jeff Johnson <jbj@redhat.com>
-- add S_ISLNK pre-transaction syscall test.
-
-* Tue Jul 11 2000 Jeff Johnson <jbj@redhat.com>
-- fix: legacy requires './' payload prefix to be omitted for rpm itself.
-- fix: remove verbose database +++/--- messages to conform to doco.
-- compare versions if doing --freshen.
-
-* Mon Jul 10 2000 Jeff Johnson <jbj@redhat.com>
-- identify package when install scriptlet fails (#12448).
-- remove build mode help from rpm.c, use rpmb instead.
-- support for rpmlib(...) internal feature dependencies.
-- fix: set multilibno on sparc per-platform config.
-
-* Sun Jul  9 2000 Jeff Johnson <jbj@redhat.com>
-- add pre-transaction syscall's to handle /etc/init.d change.
-- don't bother saving '/' as fingerprint subdir.
-- eliminate legacy RPMTAG_{OBSOLETES,PROVIDES,CAPABILITY}.
-- eliminate unused headerGz{Read,Write}.
-- fix: payload compression tag not nul terminated.
-- prefix payload paths with "./", otherwise "/" can't be represented.
-- fix: compressFilelist broke when fed '/'.
-- fix: typo in --last popt alias (#12690).
-- fix: clean file paths before performing -qf (#12493).
-
-* Wed Jul  5 2000 Jeff Johnson <jbj@redhat.com>
-- change optflags for i386.
-- multilib patch, take 1.
-
-* Fri Jun 23 2000 Jeff Johnson <jbj@redhat.com>
-- i486 optflags typo fixed.
-
-* Thu Jun 22 2000 Jeff Johnson <jbj@redhat.com>
-- internalize --freshen (Gordon Messmer <yinyang@eburg.com>).
-- support for separate source/binary compression policy.
-- support for bzip payloads.
-
-* Wed Jun 21 2000 Jeff Johnson <jbj@redhat.com>
-- fix: don't expand macros in false branch of %if (kasal@suse.cz).
-- fix: macro expansion problem and clean up (#11484) (kasal@suse.cz).
-- uname on i370 has s390 as arch (#11456).
-- put version on rpmpopt filename to avoid legacy filename collision.
-- python: initdb binding (Dan Burcaw <dburcaw@terraplex.com>).
-
-* Tue Jun 20 2000 Jeff Johnson <jbj@redhat.com>
-- fix: typo in brp-compress caused i18n man pages not to compress.
-- API: uncouple fadio from rest of librpmio.
-- API: externalize legacy fdOpen interface for rpmfind et al in librpmio.
-- update brp-* scripts from rpm-4.0, enable in per-platform config.
-- alpha: add -mieee to default optflags.
-- add RPMTAG_OPTFLAGS, configured optflags when package was built.
-- add RPMTAG_DISTURL for rpmfind-like tools (content unknown yet).
-- teach brp-compress about /usr/info and /usr/share/info as well.
-
-* Mon Jun 19 2000 Jeff Johnson <jbj@redhat.com>
-- fix: open all db indices before performing chroot.
-
-* Sun Jun 18 2000 Jeff Johnson <jbj@redhat.com>
-- require --rebuilddb to convert db1 -> db3, better messages.
-
-* Fri Jun 16 2000 Jeff Johnson <jbj@redhat.com>
-- fix: resurrect symlink unique'ifying property of finger prints.
-
-* Wed Jun 14 2000 Jeff Johnson <jbj@redhat.com>
-- fix: don't count removed files if removed packages is empty set.
-- fix: permit '\0' as special case key (e.g. "/" in Basenames).
-
-* Tue Jun 13 2000 Jeff Johnson <jbj@redhat.com>
-- make librpmio standalone.
-- fix: avoid clobbering db cursor in removeBinaryPackage.
-- expose cursors in dbi interfaces, remove internal cursors.
-- remove incremental link.
-- portability: sparc-sun-solaris2.5.1.
-
-* Wed Jun  7 2000 Jeff Johnson <jbj@redhat.com>
-- create rpmio directory for librpmio.
-
-* Tue Jun  6 2000 Jeff Johnson <jbj@redhat.com>
-- require db3 in default configuration.
-
-* Mon Jun  5 2000 Jeff Johnson <jbj@redhat.com>
-- add optflags for i486 and i586.
-- fix: segfault with legacy packages missing RPMTAG_FILEINODES.
-
-* Tue May 30 2000 Matt Wilson <msw@redhat.com>
-- change %%configure, add %%makeinstall macros to handle FHS changes.
-
-* Tue May 30 2000 Jeff Johnson <jbj@redhat.com>
-- mark packaging with version 4 to reflect filename/provide changes.
-- change next version from 3.1 to 4.0 to reflect package format change.
-
-* Wed May 26 2000 Jeff Johnson <jbj@redhat.com>
-- change popt exec alias in oreder to exec rpm children.
-- split rpm into 5 pieces along major mode fault lines with popt glue.
-
-* Thu May 18 2000 Jeff Johnson <jbj@redhat.com>
-- 2nd try at db1 -> db3 stable functionality.
-
-* Tue May 16 2000 Matt Wilson <msw@redhat.com>
-- build against bzip2 1.0
-- use the new fopencookie API in glibc 2.2
-
-* Fri May 12 2000 Jeff Johnson <jbj@redhat.com>
-- fix stupid mistakes (alpha segfaults).
-
-* Wed May 10 2000 Jeff Johnson <jbj@redhat.com>
-- include RPM-GPG-KEY in file manifest.
-- simplify --last popt alias, date like -qi (bjerrick@easystreet.com).
-- fix: alloca'd memory used outside of scope (alpha segfault).
-
-* Mon May  8 2000 Jeff Johnson <jbj@redhat.com>
-- FreeBSD fixes (bero@redhat.com).
-
-* Sat May  6 2000 Jeff Johnson <jbj@redhat.com>
-- finish db1 and db3 cleanup.
-
-* Tue May  2 2000 Jeff Johnson <jbj@redhat.com>
-- first try at db1 -> db3 stability.
-
-* Mon May  1 2000 Jeff Johnson <jbj@redhat.com>
-- Rename db0.c to db1.c, resurrect db2.c (from db3.c).
-- Add ia64 and sparc64 changes.
-- rpm.spec: add per-platform sub-directories.
-
-* Fri Apr 28 2000 Jeff Johnson <jbj@redhat.com>
-- Filter DB_INCOMPLETE on db->sync, it's usually harmless.
-- Add per-transaction cache of resolved dependencies (aka Depends).
-- Do lazy dbi{Open,Close} throughout.
-- Attempt fine grained dbi cursors throughout.
-- fix: free iterator *after* loop, not during.
-- fix: Depends needed keylen in dbiPut, rpmdbFreeIterator after use.
-
-* Thu Apr 27 2000 Jeff Johnson <jbj@redhat.com>
-- API: replace rpmdbUpdateRecord with rpmdbSetIteratorModified.
-- API: replace rpmdbFindByLabel with RPMDBI_LABEL iteration.
-- API: replace rpmdbGetRecord with iterators.
-- API: replace findMatches with iterators.
-
-* Tue Apr 25 2000 Jeff Johnson <jbj@redhat.com>
-- rebuild to check autoconf configuration in dist-7.0.
-
-* Sun Apr 23 2000 Jeff Johnson <jbj@redhat.com>
-- fix: cpio.c: pre-, not post-, decrement the link count.
-- make db indices as lightweight as possible, with per-dbi config.
-- db1.c will never be needed, eliminate.
-- API: merge rebuilddb.c into rpmdb.c.
-
-* Thu Apr 13 2000 Jeff Johnson <jbj@redhat.com>
-- API: pass *SearchIndex() length of key (0 will use strlen(key)).
-- API: remove rpmdb{First,Next}RecNum routines.
-- drop rpm-python subpackage until bindings are fixed.
-- add explcit "Provides: name = [epoch:]version-release" to headers.
-
-* Tue Apr 11 2000 Jeff Johnson <jbj@redhat.com>
-- solaris2.6: avoid bsearch with empty dir list (Ric Klaren - klaren@cs.utwente.nl)
-- db3: save join keys in endian neutral binary format.
-- treat legacy falloc.c as "special" db[01] index for package headers.
-
-* Thu Apr  6 2000 Jeff Johnson <jbj@redhat.com>
-- use hashed access for package headers.
-
-* Tue Apr  4 2000 Jeff Johnson <jbj@redhat.com>
-- create dbi from template rather than passed args.
-
-* Mon Apr  3 2000 Jeff Johnson <jbj@redhat.com>
-- prefer db3 as default.
-- permit db3 configuration using macros.
-
-* Fri Mar 31 2000 Jeff Johnson <jbj@redhat.com>
-- try for db3 DB_INIT_CDB model.
-
-* Fri Mar 24 2000 Jeff Johnson <jbj@redhat.com>
-- use DIRNAMES/BASENAMES/DIRINDICES not FILENAMES in packages and db.
-- configure.in fiddles for BSD systems (Patrick Schoo).
-- API: change dbi to pass by reference, not value.
-- cram all of db1, db_185, and db2 interfaces into rpmlib.
-- convert db1 -> db2 on-disk format using --rebuilddb.
-
-* Mon Mar 13 2000 Jeff Johnson <jbj@redhat.com>
-- start rpm-3.1 development.
+* Wed Aug 16 2000 Jeff Johnson <jbj@redhat.com>
+- start rpm 4.1 development.
