@@ -91,6 +91,7 @@
 	- fix: popt POST callbacks typo.
 	- fix: -Va broken, make db cursors per-iterator, not per-dbi.
 	- fix: segfault when globbing on "" (#15593).
+	- fix: rebuild db1 -> db3 ate 1st header (#16263).
 
 3.0.4 -> 3.0.5
 	- configure.in fiddles for BSD systems (Patrick Schoo).
